--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-.container {
+/*.container {
     display: flex;
     padding: 2%;
 }
@@ -6,14 +6,16 @@
 .child {
     width: 50%;
     height: 20px;
-}
+}*/
 
 .fieldSetLegend {
     font-family: Arial, Helvetica, sans-serif;
+    margin: 0 auto;
 }
 
 .fieldSetMenu {
     border-radius: 5px;
+    
 }
 
 .buttonMenu {
@@ -21,4 +23,22 @@
     width: 50%;
     height: 30px;
     margin-left: 25%;
+    transition: box-shadow 0.3s
+}
+
+.buttonMenu:hover {
+    box-shadow: 1px 1px 5px 0px rgba(0, 0, 0, 0.5);
+}
+
+.comboOp {
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    width: 50%;
+    height: 30px;
+    margin-left: 25%;
+    transition: box-shadow 0.3s
+}
+
+.comboOp:hover {
+    box-shadow: 1px 1px 5px 0px rgba(0, 0, 0, 0.5);
 }
