--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,13 +1,3 @@
-/*.container {
-    display: flex;
-    padding: 2%;
-}
-
-.child {
-    width: 50%;
-    height: 20px;
-}*/
-
 .fieldSetLegend {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0 auto;
@@ -15,7 +5,22 @@
 
 .fieldSetMenu {
     border-radius: 5px;
-    
+}
+
+label {
+    pointer-events: none;
+}
+
+.divFileName {
+    width: 100%;
+    margin-left: 0 auto;
+    margin-bottom: 8px;
+    text-align: center;
+}
+
+.fileName {
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
 }
 
 .buttonMenu {
@@ -27,6 +32,16 @@
 }
 
 .buttonMenu:hover {
+    box-shadow: 1px 1px 5px 0px rgba(0, 0, 0, 0.5);
+}
+
+.buttonClean {
+    font-family: Arial, Helvetica, sans-serif;
+    height: 30px;
+    transition: box-shadow 0.3s;
+}
+
+.buttonClean:hover {
     box-shadow: 1px 1px 5px 0px rgba(0, 0, 0, 0.5);
 }
 
