--- a/styles/styles.css
+++ b/styles/styles.css
@@ -50,11 +50,20 @@ body {
     text-align: center;
 }
 
-.textAreaResult {
+.divResult {
     width: 99%;
     height: 200px;
+    overflow: auto;
     resize: none;
     border-radius: 4px;
+}
+
+.divResult.centerAlign {
+    text-align: center;
+}
+
+.divResult.rightAlign {
+    text-align: right;
 }
 
 label {
@@ -62,6 +71,13 @@ label {
 }
 
 .divFileName {
+    width: 100%;
+    margin-left: 0 auto;
+    margin-bottom: 8px;
+    text-align: center;
+}
+
+.divAlign {
     width: 100%;
     margin-left: 0 auto;
     margin-bottom: 8px;
@@ -84,6 +100,20 @@ label {
 }
 
 .buttonMenu:hover {
+    box-shadow: 1px 1px 4px 0px rgba(0, 0, 0, 0.5);
+}
+
+.buttonAlign {
+    background-color: #f6f8fa;
+    border: 1px solid;
+    border-radius: 6px;
+    border-color: rgba(0, 0, 0, 0.3);
+    width: 85px;
+    height: 20px;
+    transition: box-shadow 0.2s
+}
+
+.buttonAlign:hover {
     box-shadow: 1px 1px 4px 0px rgba(0, 0, 0, 0.5);
 }
 
